# nmrkit

./: .gitignore  pyproject.toml
.github/workflows/: python-publish.yml
tests/core/: test_data.py
tests/processing/: test_ft.py  test_phase.py  test_resize.py  test_window.py
tests/utils/: test_validation.py
