[project]
name = "nmrkit"
version = "0.1.0"
description = "A lightweight Python library for nuclear magnetic resonance (NMR) data processing and analysis"
authors = [
    {name = "Jiekang Tian",email = "jiekangtian@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "numpy (>=1.21.0,<3.0.0)"
]

[project.optional-dependencies]
visualization = [
    "matplotlib (>=3.5.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "numpy (>=2.3.5,<3.0.0)"
]
